Working on Images & Scene

--- a/shuck_laurie_Homework1/index.html
+++ b/shuck_laurie_Homework1/index.html
@@ -1,7 +1,8 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 
 <head>
+    <meta charset="utf-8">
     <title>HTML5 Drawing</title>
     <!--Modernizr Script-->
     <script src="includes/modernizr.js"></script>
@@ -38,15 +39,18 @@
 
 
         <!--image for the 6th canvas-->
-        <img id="picture" src="image/logo.png" height="1088" width="3300">
+        <img id="img1" src="image/logo.png" width="3300" height="1088" style="display: none"/>
         <!--Sixth Canvas Images-->
-        <canvas id="canvas6" width="4000" height="1200" style="border:1px solid #d3d3d3">
+        <canvas id="canvas6" width="4000" height="1850" style="border:1px solid #d3d3d3">
             Sorry, your browser does not support the canvas element.
         </canvas>
 
-
+        <!--Image for 7th canvas-->
+        <img id="img2" src="image/meAndRonPaul.jpg" width="960" height="720" style="display: none"/>
+        <img id="img3" src="image/drPaulCrowd.jpg" width="403" height="537" style="display: none"/>
+        <img id="img4" src="image/drPaulStairs.jpg" width="960" height="720" style="display: none"/>
         <!--Seventh Canvas Scene-->
-        <canvas id="canvas7" width="300" height="300">
+        <canvas id="canvas7" width="960" height="720" style="border: 10px double #000000">
             Sorry, your browser does not support the canvas element.
         </canvas>
 
