--- a/shuck_laurie_Homework1/index.html
+++ b/shuck_laurie_Homework1/index.html
@@ -3,14 +3,14 @@
 
 <head>
     <meta charset="utf-8">
-    <title>HTML5 Drawing</title>
+    <title>HTML5 Drawing | By Laurie Shuck</title>
     <!--Modernizr Script-->
     <script src="includes/modernizr.js"></script>
 </head>
 
 <body>
     <div id="container">
-        <h1>HTML5 Canvas Drawing</h1>
+        <h1>Laurie's HTML5 Canvas Drawing</h1>
 
         <!--First Canvas Rectangle-->
         <canvas id="canvas1" width="300" height="300">
@@ -37,27 +37,26 @@
             Sorry, your browser does not support the canvas element.
         </canvas>
 
-
         <!--image for the 6th canvas-->
-        <img id="img1" src="image/logo.png" width="3300" height="1088" style="display: none"/>
+        <img id="img1" src="image/logo.png" alt="Logo for the Web Interaction and Animation course at Full Sail University." width="3300" height="1088" style="display: none"/>
         <!--Sixth Canvas Images-->
         <canvas id="canvas6" width="4000" height="1850" style="border:1px solid #d3d3d3">
             Sorry, your browser does not support the canvas element.
         </canvas>
 
-        <!--Image for 7th canvas-->
-        <img id="img2" src="image/meAndRonPaul.jpg" width="960" height="720" style="display: none"/>
-        <img id="img3" src="image/drPaulCrowd.jpg" width="403" height="537" style="display: none"/>
-        <img id="img4" src="image/drPaulStairs.jpg" width="960" height="720" style="display: none"/>
+        <!--Images for 7th canvas, I own all of the images-->
+        <img id="img2" src="image/meAndRonPaul.jpg" alt="An image of Ron Paul at a private reception signing books." width="960" height="720" style="display: none"/>
+        <img id="img3" src="image/drPaulCrowd.jpg" alt="Dr.Paul in a crowd of people." width="403" height="537" style="display: none"/>
+        <img id="img4" src="image/drPaulStairs.jpg" alt="I was lucky enough to spend a few minutes alone with Dr. Paul, and snapped a photo as we were chatting while walking up the stairs." width="960" height="720" style="display: none"/>
         <!--Seventh Canvas Scene-->
         <canvas id="canvas7" width="960" height="720" style="border: 10px double #000000">
             Sorry, your browser does not support the canvas element.
         </canvas>
 
-
-
     </div><!--end of the container div-->
 
+
+    <!--Custom Javascript file-->
     <script src="js/main.js" type="text/javascript"></script>
 </body>
 </html>
